--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<div class="anime-second-dis">
 
 						<a  href="./Library.html">
-							<img class="portolio-image" src="img/src/library.png" alt="portfolio">
+							<img class="portolio-image" src="img/src/Library.png" alt="portfolio">
 						</a>
 
 						<h3 class="h3 ">Здесь я собрал разные программы, игры и другие прикольные штуки, которые делал. Некоторые действительно интересные на мой взгляд.</h3>
