--- a/Layout1.html
+++ b/Layout1.html
@@ -484,12 +484,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<div class="footer-icons text-center">
+<!-- 					<div class="footer-icons text-center">
 						<a href="#"><i class="fab fa-twitter"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
 						<a href="#"><i class="fab fa-twitter"></i></a>
-					</div>
+					</div> -->
 					<hr class="footer__line">
 					<div class="designed text-center">
 						© 2015 Startup, Designed by ShapedTheme
