--- a/index.html
+++ b/index.html
@@ -290,14 +290,15 @@
 				</div>
 			</div>
 
+
 			<div class="row connect-wrapper">
 				<div class="col-xl-4 offset-xl-2 col-lg-4 offset-lg-1 col-md-12">
-					<a class="contact anime-left-connect" href="#">
+					<a class="contact anime-left-connect" href="https://t-do.ru/Ilyacheredov" target="_blank">
 						<i class="fa fa-telegram" aria-hidden="true"></i>
 							@Ilyacheredov
 					</a>
-					<a class="contact anime-left-connect" href="#">
-							<i class="fa fa-vk" aria-hidden="true"></i>
+					<a href="https://vk.com/id220521554" target="_blank" class="contact anime-left-connect" href="#">
+							<i  class="fa fa-vk" aria-hidden="true"></i>
 							id220521554
 					</a>
 
@@ -306,15 +307,16 @@
 				</div>
 
 				<div class="col-xl-5 col-lg-6 offset-lg-1 col-md-12">
-						<a class="contact anime-right-connect" href="#">
+						<p class="contact anime-right-connect" href="#">
 								<i class="fa fa-envelope" aria-hidden="true"></i>
 								Ilyacheredov@Gmail.com
-						</a>
-						<a class="contact anime-right-connect" href="#">
+						</p>
+						<a class="contact anime-right-connect" href="+79009836911">
 								<i class="fa fa-phone" aria-hidden="true"></i>
 								+7 (900) 983-69-11
 						</a>
 				</div>
+
 			</div>
 		</div>
 	</section>
