--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 								<i class="fa fa-envelope" aria-hidden="true"></i>
 								Ilyacheredov@Gmail.com
 						</p>
-						<a class="contact anime-right-connect" href="+79009836911">
+						<a class="contact anime-right-connect"  href="tel:+7 (900) 983 69 11">
 								<i class="fa fa-phone" aria-hidden="true"></i>
 								+7 (900) 983-69-11
 						</a>
