--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-11 ">
 						<div class="first-desc">
-							Ниже представлены cайты и не только, которые я делал в процессе моего обучения
+							Ниже представлены cайты и не только, которые мне довелось делать
 						</div>
 				</div>
 				</div>
