--- a/Library.html
+++ b/Library.html
@@ -22,7 +22,7 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<link rel="stylesheet" href="/css/Library-main.min.css">
+	<link rel="stylesheet" href="./css/Library-main.min.css">
 	<link rel="stylesheet" href="aditional.css">
 
 </head>
@@ -312,7 +312,7 @@
 
 
 
-	<script src="js/scripts.min.js"></script>
+	<script src="./js/library-scripts.min.js"></script>
 
 </body>
 
