--- a/Library.html
+++ b/Library.html
@@ -316,7 +316,7 @@
 	</div>
 
 
-	<script src="js/library-scripts.min.js"></script>
+	<script src="js/Library-scripts.min.js"></script>
 </body>
 
 </html>
