--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
@@ -11,13 +11,13 @@
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
+
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="icon" href="img/favicon/b-cirle.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/b-cirle.png">
 	<!-- Template Basic Images End -->
-	
+
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
@@ -28,17 +28,14 @@
 
 <body class="scroll-black">
 
-
 	<!-- <i class="fa fa-address-book" aria-hidden="true"></i> -->
 
 	<header class="first-section">
 
-
-
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-1 col-1">
-						<i class="fa fa-phone first-section-fa" aria-hidden="true" title="Связаться"></i>
+					<i class="fa fa-phone first-section-fa" aria-hidden="true" title="Связаться"></i>
 				</div>
 
 				<!-- <div class="col-9 offset-1">
@@ -51,36 +48,49 @@
 					</nav>
 				</div> -->
 
-				<div class="col-sm-1 offset-sm-10 col-2 offset-8">
-					<label class="switch-b" title="Темная тема">
+				<div class="col-sm-2 offset-sm-9 col-2 offset-8 switch-wrapper color-theme-wrapper">
+					<label class="switch-b">
+						<div class="switch-desk">Color theme</div>
 						<input class="color-theme-button" type="checkbox" checked>
-						<span class="slider-b round-b"></span>
+						<span class="slider-b slider-b-black round-b"></span>
 					</label>
 				</div>
+
 			</div>
+
+			<div class="row">
+
+				<div class="col-sm-1 offset-sm-11 col-2 offset-9 switch-wrapper switch-language">
+					<label class="switch-b">
+						<div class="switch-desk switch-desk-lang">English</div>
+						<input class="color-theme-button language-button" type="checkbox" checked>
+						<span class="slider-b slider-b-black round-b"></span>
+					</label>
+				</div>
+
+			</div>
+
 		</div>
-
-
 
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-12">
-					<h1 class="h1" style="opacity: 0">Добро Пожаловать</h1>
-					<h3 class="h3" style="opacity: 0">Здесь собрана небольшая коллекция работ, и немного о себе</h3>
+					<h1 class="h1" style="opacity: 0">Welcome</h1>
+					<h3 class="h3 " style="opacity: 0">Here is a collection of works, and about myself</h3>
 
 				</div>
 			</div>
 		</div>
 
 		<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-11 ">
-						<div class="first-desc">
-							Ниже представлены cайты и не только, которые мне довелось делать
-						</div>
-				</div>
+			<div class="row justify-content-center">
+				<div class="col-md-11 ">
+					<div class="first-desc below-first-screen">
+						Below are the sites and not only that I did
+					</div>
 				</div>
 			</div>
+		</div>
 	</header>
 
 	<section class="portfolio">
@@ -88,111 +98,148 @@
 			<div class="row justify-content-center  ">
 				<div class="col-12">
 
-					<h2 class="h2  anime-dis">Моя библиотека</h2>
+					<h2 class="h2  anime-dis">My Library</h2>
 
 					<div class="anime-second-dis">
 
-						<a  href="./Library.html">
-							<img class="portolio-image" src="img/src/Library.png" alt="portfolio">
+						<a href="./Library.html">
+							<img class="portolio-image" src="img/src/Library-en.png" alt="portfolio">
 						</a>
 
-						<h3 class="h3 ">Здесь я собрал разные программы, игры и другие прикольные штуки, которые делал. Некоторые действительно интересные на мой взгляд.</h3>
+						<h3 class="h3">Here I collected programs, games and other cool stuff that I did. Some
+							really interesting in my opinion.</h3>
 
 						<a href="./Library.html" class="brk-btn ">
+							visit
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row justify-content-center  ">
+				<div class="col-12">
+
+					<h2 class="h2  anime-dis">Store on React.js</h2>
+
+					<div class="anime-second-dis">
+
+						<a href="https://ilyacheredov1.github.io/store-react/home">
+							<img class="portolio-image" src="img/src/store.png" alt="portfolio">
+						</a>
+
+						<h3 class="h3 ">I completed several courses on React.js and decided to consolidate my knowledge and made an
+							online store on React.
+						</h3>
+
+						<a href="https://ilyacheredov1.github.io/store-react/home" class="brk-btn">
+							visit
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="row justify-content-center  ">
+				<div class="col-12">
+
+					<h2 class="h2  anime-dis">Layout</h2>
+
+					<div class="anime-second-dis">
+
+						<a href="./Layout1.html">
+							<img class="portolio-image" src="img/src/Layout1.png" alt="portfolio">
+						</a>
+
+						<h3 class="h3 ">Made layout of the landing page as a workout. Added adaptability and menu navigation.
+						</h3>
+
+						<a href="./Layout1.html" class="brk-btn ">
+							visit
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container parallax">
+			<div class="row justify-content-center">
+				<div class="col-12">
+
+					<h2 class="h2  anime-dis">Parallax on the Web</h2>
+
+					<div class="anime-second-dis">
+
+						<a href="./Parallax.html">
+							<img class="portolio-image" src="img/src/WebDevParalax.png" alt="portfolio">
+						</a>
+
+						<h3 class="h3">Passed <a class="href" target="_blank"
+								href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4IyCbhul-PdeiDqmh4ooJzk">course from channel
+								Devtips</a> and learned to make very cool parallax effects. The author did everything in jQuery, I did
+							everything parallel to it, but on native JS. I added support for a dark theme from myself. To change the
+							subject you need click on the logo in the upper right menu.</h3>
+
+						<a href="./Parallax.html" class="brk-btn ">
+							visit
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="container instagram">
+			<div class="row justify-content-center">
+				<div class="col-12">
+
+					<h2 class="h2  anime-dis">Instagram Bot</h2>
+
+					<div class="anime-second-dis">
+
+						<a target="_blank" href="https://github.com/Ilyacheredov1/InstagramBot">
+							<img class="portolio-image" src="img/src/instagram.png" alt="portfolio">
+						</a>
+
+						<h3 class="h3">When I studied NodeJS, I wrote Instagram bot. He collects an array of people who like any
+							post, and goes through them, can like, subscribe, write comments. I tested on a fake account for a couple
+							of weeks and scored 2k subscribers. This is a great thing for online stores. If interested, I left a link
+							to GitHub.</h3>
+
+						<a target="_blank" href="https://github.com/Ilyacheredov1/InstagramBot" class="brk-btn ">
+							visit
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- <div class="container">
+			<div class="row justify-content-center  ">
+				<div class="col-12">
+
+					<h2 class="h2 anime-dis">Джедай верстки 7</h2>
+
+					<div class="anime-second-dis">
+
+						<a href="./Djeday7.html">
+							<img class="portolio-image" src="img/src/Djeday7.png" alt="portfolio">
+						</a>
+
+						<h3 class="h3 ">Прошел 12 часовой курс <a class="href" target="_blank"
+								href="https://www.youtube.com/watch?v=vWfRHtxy81Q&t=11596s">Джедай Верстки 7</a> с канала WebDesign
+							Master. Курс 2017 года и многие API библиотек, которые использовал автор устарели, приходилось читать
+							документацию самостоятельно. Я прямо таки, огромного опыта набрался когда проходил этот курс и многому
+							научился.</h3>
+
+						<a href="./Djeday7.html" class="brk-btn ">
 							Посетить
 						</a>
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="container">
-				<div class="row justify-content-center  ">
-					<div class="col-12">
-	
-						<h2 class="h2  anime-dis">Верстка сайта</h2>
-	
-						<div class="anime-second-dis">
-	
-							<a href="./Layout1.html">
-								<img class="portolio-image" src="img/src/Layout1.png" alt="portfolio">
-							</a>
-	
-							<h3 class="h3 ">Сделал верстку лендинга в качестве тренировки. Добавил адаптивность и навигацию по меню.</h3>
-	
-							<a href="./Layout1.html" class="brk-btn ">
-								Посетить
-							</a>
-						</div>
-					</div>
-				</div>
-		</div>
-		
-		<div class="container parallax">
-				<div class="row justify-content-center">
-					<div class="col-12">
-
-						<h2 class="h2  anime-dis">Parallax on the Web</h2>
-
-						<div class="anime-second-dis">
-
-							<a href="./Parallax.html">
-								<img class="portolio-image" src="img/src/WebDevParalax.png" alt="portfolio">
-							</a>
-
-							<h3 class="h3">Прошел <a class="href" target="_blank" href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4IyCbhul-PdeiDqmh4ooJzk">серию видео с канала DevTips</a> и научился делать очень прикольные параллакс эффекты. Автор делал все на jQuery, я делал все параллельно с ним, но на нативном JS. От себя добавил поддержку тёмной темы. Чтобы сменить тему нужно, нажать на логотип в правом верхнем меню.</h3>
-
-							<a href="./Parallax.html" class="brk-btn ">
-								Посетить
-							</a>
-						</div>
-					</div>
-				</div>
-		</div>
-
-		<div class="container instagram">
-				<div class="row justify-content-center">
-					<div class="col-12">
-
-						<h2 class="h2  anime-dis">Инстаграм бот</h2>
-
-						<div class="anime-second-dis">
-
-							<a target="_blank" href="https://github.com/Ilyacheredov1/InstagramBot">
-								<img class="portolio-image" src="img/src/instagram.png" alt="portfolio">
-							</a>
-
-							<h3 class="h3">Когда изучал NodeJS, написал удовольствия ради Инстаграм бот. Он собирает массив людей лайкнувших любой пост, и проходит по ним, может ставить лайки, подписываться, писать комментарии. Я тестил на фейковом аккаунте пару недель и набрал 2к подписчиков. Это отличная штука для интернет магазинов. Если интересно, я оставил ссылку на GitHub.</h3>
-
-							<a target="_blank" href="https://github.com/Ilyacheredov1/InstagramBot" class="brk-btn ">
-								Посетить
-							</a>
-						</div>
-					</div>
-				</div>
-		</div>
-			
-		<div class="container">
-				<div class="row justify-content-center  ">
-					<div class="col-12">
-
-						<h2 class="h2 anime-dis">Джедай верстки 7</h2>
-
-						<div class="anime-second-dis">
-
-							<a href="./Djeday7.html">
-								<img class="portolio-image" src="img/src/Djeday7.png" alt="portfolio">
-							</a>
-
-							<h3 class="h3 ">Прошел 12 часовой курс <a class="href" target="_blank" href="https://www.youtube.com/watch?v=vWfRHtxy81Q&t=11596s">Джедай Верстки 7</a> с канала WebDesign Master. Курс 2017 года и многие API библиотек, которые использовал автор устарели, приходилось читать документацию самостоятельно. Я прямо таки, огромного опыта набрался когда проходил этот курс и многому научился.</h3>
-
-							<a  href="./Djeday7.html" class="brk-btn ">
-								Посетить
-							</a>
-						</div>
-					</div>
-				</div>
-			</div>
+		</div> -->
 	</section>
 
 	<section class="my-skills">
@@ -200,81 +247,81 @@
 
 			<div class="row">
 				<div class="col-12">
-						<div class="my-skills-title">Мои Навыки</div>
+					<div class="my-skills-title">My Skills</div>
 				</div>
 			</div>
 
 			<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">HTML5</h3> 
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">HTML5</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">CSS3</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">CSS3</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">Photoshop</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">Photoshop</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">SCSS/SASS/LESS</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">SCSS/SASS</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">Javascript(ES6)</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">Javascript(ES6)</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">React</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">React.js</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">NodeJS</h3>
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">Node.js</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
-				<div class="row skill-item">
-					<div class="col-6 offset-sm-2">
-						<h3 class="h3">English</h3> 
-					</div>
-					<div class="col-2 offset- anime-right">
-						<i class="fa fa-check" aria-hidden="true"></i>
-					</div>
+			<div class="row skill-item">
+				<div class="col-6 offset-sm-2">
+					<h3 class="h3">English</h3>
 				</div>
+				<div class="col-2 offset- anime-right">
+					<i class="fa fa-check" aria-hidden="true"></i>
+				</div>
+			</div>
 
 
 		</div>
@@ -286,51 +333,71 @@
 		<div class="container">
 			<div class="row">
 				<div class="col">
-					<h3 class="h3 connect-title">Для Связи</h3>
+					<h3 class="h3 connect-title">For connection</h3>
 				</div>
 			</div>
 
-
-			<div class="row connect-wrapper">
+			<!-- <div class="row connect-wrapper">
 				<div class="col-xl-4 offset-xl-2 col-lg-4 offset-lg-1 col-md-12">
 					<a class="contact anime-left-connect" href="https://t-do.ru/Ilyacheredov" target="_blank">
 						<i class="fa fa-telegram" aria-hidden="true"></i>
-							@Ilyacheredov
+						@Ilyacheredov
 					</a>
 					<a href="https://vk.com/id220521554" target="_blank" class="contact anime-left-connect" href="#">
-							<i  class="fa fa-vk" aria-hidden="true"></i>
-							id220521554
+						<i class="fa fa-vk" aria-hidden="true"></i>
+						id220521554
 					</a>
-
-
-
 				</div>
 
 				<div class="col-xl-5 col-lg-6 offset-lg-1 col-md-12">
-						<p class="contact anime-right-connect" href="#">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-								Ilyacheredov@Gmail.com
-						</p>
-						<a class="contact anime-right-connect"  href="tel:+7 (900) 983 69 11">
-								<i class="fa fa-phone" aria-hidden="true"></i>
-								+7 (900) 983-69-11
-						</a>
+					<p class="contact anime-right-connect" href="#">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						Ilyacheredov@Gmail.com
+					</p>
+					<a class="contact anime-right-connect" href="tel:+7 (900) 983 69 11">
+						<i class="fa fa-phone" aria-hidden="true"></i>
+						+7 (900) 983-69-11
+					</a>
+				</div> -->
+
+		</div>
+		</div>
+
+		<div class="container">
+			<div class="row">
+
+				<div class="col-xl-4">
+					<a class="contact " href="https://t-do.ru/Ilyacheredov" target="_blank">
+						<i class="fa fa-telegram" aria-hidden="true"></i>
+						@Ilyacheredov
+					</a>
+				</div>
+
+				<div class="col-xl-4">
+					<p class="contact" href="#">
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+						Ilyacheredov@Gmail.com
+					</p>
+				</div>
+
+				<div class="col-xl-4">
+					<a class="contact" href="tel:+7 (900) 983 69 11">
+						<i class="fa fa-phone" aria-hidden="true"></i>
+						+7 (900) 983-69-11
+					</a>
 				</div>
 
 			</div>
 		</div>
+
 	</section>
-
-
-
-
 
 
 	<div class="container">
 		<div class="row ">
 			<div class="col ">
 				<div class="white-end">
-						<div class="end-desc">Спасибо за внимание)</div>
+					<div class="end-desc">Thanks for attention</div>
 				</div>
 			</div>
 		</div>
@@ -338,8 +405,8 @@
 
 
 
-
 	<script src="js/home-scripts.min.js"></script>
 
 </body>
+
 </html>
