--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="row justify-content-center">
 				<div class="col-12">
 					<h1 class="h1" style="opacity: 0">Welcome</h1>
-					<h3 class="h3 " style="opacity: 0">Here is a collection of works, and about myself</h3>
+					<h3 class="h3 " style="opacity: 0">Here is a collection of works and about myself</h3>
 
 				</div>
 			</div>
