--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 </head>
 
 <body class="scroll-black">
-
-	<!-- <i class="fa fa-address-book" aria-hidden="true"></i> -->
-
 	<header class="first-section">
 
 		<div class="container-fluid">
@@ -68,30 +65,31 @@
 					</label>
 				</div>
 
+
 			</div>
 
-		</div>
-
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-12">
-					<h1 class="h1" style="opacity: 0">Welcome</h1>
-					<h3 class="h3 " style="opacity: 0">Here is a collection of works and about myself</h3>
-
-				</div>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-11 ">
-					<div class="first-desc below-first-screen">
-						Below are the sites and not only that I did
+			<div class="container">
+				<div class="row justify-content-center main-title">
+					<div class="col-12">
+						<h1 class="h1" style="opacity: 0">Welcome</h1>
+						<h3 class="h3 " style="opacity: 0">Here is a collection of works, and about myself</h3>
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</header>
+
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-11 ">
+				<div class="first-desc below-first-screen">
+					Below are the sites and not only that I did
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<section class="portfolio">
 		<div class="container">
