--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 		<div class="my-skills-title">My Skills</div>
 		<div class="skill-item">
 			<div class="skill-item-name">
-				<h3 class="h3">English</h3>
+				<h3 class="h3">HTML5</h3>
 			</div>
 			<div class="skill-item-fa anime-right">
 				<i class="fa fa-check" aria-hidden="true"></i>
