--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 					<div class="anime-second-dis">
 
-						<a href="https://ilyacheredov1.github.io/Blog-on-React.js">
+						<a href="https://ilyacheredov1.github.io/store-react/home">
 							<img class="portolio-image" src="img/src/store.png" alt="portfolio">
 						</a>
 
