--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-sm-1 col-1">
-					<a href="https://github.com/Ilyacheredov1?tab=repositories" target="_blank" class="github-href">
+					<a href="https://github.com/Ilyacheredov1" target="_blank" class="github-href">
 						<i class="fa fa-github first-section-fa" aria-hidden="true" title="GitHub"></i>
 					</a>
 				</div>
