--- a/index.html
+++ b/index.html
@@ -319,6 +319,17 @@
 	</div>
 
 	<script src="js/home-scripts.min.js"></script>
+	
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150460274-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-150460274-1');
+	</script>
 
 </body>
 
