--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name="theme-color" content="#000">
 	<meta name="google" content="notranslate" />
 
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="css/home-main.min.css">
 </head>
 
 <body class="scroll-black">
@@ -320,7 +320,7 @@
 		<div class="end-desc">Thanks for attention</div>
 	</div>
 
-	<script src="js/scripts.min.js"></script>
+	<script src="js/home-scripts.min.js"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-150460274-1"></script>
