--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 		<div class="skill-item">
 			<div class="skill-item-name">
-				<h3 class="h3">Photoshop</h3>
+				<h3 class="h3">Photoshop/AdobeXD</h3>
 			</div>
 			<div class="skill-item-fa anime-right">
 				<i class="fa fa-check" aria-hidden="true"></i>
@@ -248,12 +248,22 @@
 
 		<div class="skill-item">
 			<div class="skill-item-name">
-				<h3 class="h3">Javascript(ES6)</h3>
+				<h3 class="h3">Javascript(ES7)</h3>
 			</div>
 			<div class="skill-item-fa anime-right">
 				<i class="fa fa-check" aria-hidden="true"></i>
 			</div>
 		</div>
+		
+		<div class="skill-item">
+			<div class="skill-item-name">
+				<h3 class="h3">Typescript</h3>
+			</div>
+			<div class="skill-item-fa anime-right">
+				<i class="fa fa-check" aria-hidden="true"></i>
+			</div>
+		</div>
+
 
 		<div class="skill-item">
 			<div class="skill-item-name">
@@ -263,6 +273,16 @@
 				<i class="fa fa-check" aria-hidden="true"></i>
 			</div>
 		</div>
+		
+		<div class="skill-item">
+			<div class="skill-item-name">
+				<h3 class="h3">React Native</h3>
+			</div>
+			<div class="skill-item-fa anime-right">
+				<i class="fa fa-check" aria-hidden="true"></i>
+			</div>
+		</div>
+
 
 		<div class="skill-item">
 			<div class="skill-item-name">
